# mandelbrotjs

./: .gitignore  COARSE_MODE_FEATURE.md  LARGE_SEGMENT_OPTIMIZATIONS.md  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_WASM.md  REFACTORING.md  build-config.js  build.sh  index-enhanced.html  index.html  index_old.html  julia-compute.js  julia-render.js  mandel-compute-enhanced.js  mandel-compute-wasm.js  mandel-compute.js  mandel-render-wasm.js.backup  mandel-render.js  mandel-render.js.backup  mandel-workers.js  manifest.json  performance-test.js  test-large-segments.html  test-performance.js  test-server.py
.github/workflows/: build-wasm.yml
pkg/: mandel_wasm.d.ts  mandel_wasm.js  mandel_wasm_bg.wasm  mandel_wasm_bg.wasm.d.ts  package.json
wasm/: Cargo.toml
wasm/src/: lib.rs
